-bcrumb roll animation fix for mobile tap -reduce glitch on mobile -increase carousel swipe range mobile -change pointer event for header test mobile

--- a/src/Style/Component.scss
+++ b/src/Style/Component.scss
@@ -21,6 +21,7 @@
   & > h1 {
     position: absolute;
     z-index: 1;
+    pointer-events: none;
   }
   .menu {
     position: relative;
